// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExternalLink component Should render the ExternalLink component 1`] = `
<DocumentFragment>
  <a
    href="https://google.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    Link
  </a>
</DocumentFragment>
`;

exports[`ExternalLink component Should render the ExternalLink component 2`] = `
<DocumentFragment>
  <a
    class="link"
    href="https://google.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    Link
  </a>
</DocumentFragment>
`;
